[package]
name = "apollo-framework"
version = "0.0.1"
authors = ["scireum GmbH <info@scireum.de>"]
edition = "2018"
license = "MIT"
description = "The Apollo framework is a toolkit for building stable and robust server software."
readme = "README.md"
repository = "https://github.com/scireum/apollo-framework"
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
log = { version = "0.4.11", features = ["max_level_debug", "release_max_level_info"] }
simplelog = "0.9.0"
lazy_static = "1.4.0"
regex = "1.4.2"
anyhow = "1.0.36"
arc-swap = "1.1.0"
yaml-rust = "0.4.4"
bytes = "1.0.0"
